services/fd-tagging-tool/src/test/resources/invalid/NoFeaturePresent/NoFeaturePresent.fd
package invalid.NoFeaturePresent;

featurediagram NoFeaturePresent {

  Car -> ElectricWindowOpener? & PanoramicRoof?;

  Car -> SmallTrunk ^ LargeTrunk;

  PanoramicRoof -> Electric?;

  Electric requires ElectricWindowOpener;
}